# chicago_transit_equity

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  atproto_data_fetch.py  atproto_data_pipe.py  pyproject.toml  reddit_data_fetch.py  reddit_data_pipe.py  requirements.txt
cta_pipeline/: __init__.py  constants.py  context_inheritance.py  data_fetch.py  dataset_transforms.py  errors.py  feedback_classification.py  gtfs_loader.py  logging_config.py  metrics.py  models.py  route_extraction.py  sentiment_analysis.py  stop_extraction.py  text_processing.py  thread_detection.py  time_extraction.py  transit_classification.py
dashboard/: README.md  __init__.py  app.py  requirements.txt
dashboard/components/: map_display.py  post_previews.py  sentiment_charts.py  sidebar.py
dashboard/precomputed/: route_sentiment.parquet  routes_simplified.json  school_stops.parquet  sentiment_time_series.parquet  top_posts.parquet
dashboard/utils/: data_loader.py  route_mapping.py
data/: README.md
data/cps_data/: Chicago_Public_Schools_-_School_Locations_SY2526_20251215.csv  Chicago_Public_Schools_-_School_Locations_SY2526_20251215.geojson
data/gtfs/: README.md
notebooks/: data_fetch_demo.ipynb  pipeline_demo.ipynb
precompute/: __init__.py  aggregate_sentiment.py  compute_school_stops.py  create_route_shapes.py  simplify_routes.py
