[project]
name = "cta-pipeline"
version = "0.1.0"
description = "CTA Transit Equity Dashboard - sentiment analysis and visualization"
requires-python = ">=3.10"

# Core dependencies for data fetching
dependencies = [
    "requests>=2.31.0",
    "atproto>=0.0.46",
    "pandas>=2.0.0",
    "structlog>=23.1.0",
]
