[project]
name = "cta-pipeline"
version = "0.1.0"
description = "CTA Transit Equity Dashboard - sentiment analysis and visualization"
requires-python = ">=3.10"

# Core dependencies for the NLP pipeline
dependencies = [
    "datasets>=2.14.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "pytz>=2023.3",
    "ftfy>=6.1.0",
    "emoji>=2.8.0",
    "tqdm>=4.65.0",
    "structlog>=23.1.0",
    "shapely>=2.0.0",
    "pyproj>=3.0.0",
]

[project.optional-dependencies]
# Data fetching from Reddit and Bluesky
fetch = [
    "requests>=2.31.0",
    "atproto>=0.0.46",
]

# Streamlit dashboard
dashboard = [
    "streamlit>=1.28.0",
    "folium>=0.14.0",
    "streamlit-folium>=0.15.0",
    "plotly>=5.18.0",
    "pyarrow>=14.0.0",
]

# Jupyter notebooks
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
]

# Development and testing
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
]

# All optional dependencies
all = [
    "cta-pipeline[fetch,dashboard,notebooks,dev]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]



